Fix deployment bugs 03/05/2016
Change file upload date to just d/m/y

fix scrollbar on menu, the height was set to a fixed value which caused
UI issues when not having enough files.

Change text on upload customers modal

Enabled support for Google CSV format for customer upload

Change login text to Login (Beta)

--- a/src/main/webapp/assets/styles/sp-style.css
+++ b/src/main/webapp/assets/styles/sp-style.css
@@ -271,11 +271,11 @@ sp-mail-choice{
 }
 
 .sp-analytics-container__div{
-  height: 300px;
+  max-height: 300px;
 }
 
 #sp-sales-analytics-scroll{
-  height: 300px;
+  max-height: 300px;
 }
 
 .sp-data-widget{
@@ -284,4 +284,12 @@ sp-mail-choice{
 
 .sp-widget-text{
   font-size: 23px !important; 
+}
+
+.sp-download-contacts-help{
+  margin-top: 10px;
+}
+
+.sp-create-csv-help{
+  margin-top: 10px;
 }
